--- a/src/styles/Layout/MainLayout.module.scss
+++ b/src/styles/Layout/MainLayout.module.scss
@@ -4,6 +4,7 @@
   max-width: 1920px;
   padding: 0 8rem;
   margin: 0 auto;
+  overflow: hidden;
   @media screen and (max-width: 800px) {
     padding: 0 3rem;
   }
